@@ -308,6 +308,7 @@ setup_maildir()
 		mkdir -p $testdir/$testuser/Maildir/$i
 		mkdir -p $testdir/$testuser/Maildir/.Quarantine/$i
 		mkdir -p $testdir/$testuser/Maildir/.Spam/$i
+		mkdir -p $testdir/blackholed/Maildir/$i
 		mkdir -p $testdir/$incarchive/Maildir/$i
 		mkdir -p $testdir/$outarchive/Maildir/$i
 	done
@@ -438,6 +439,8 @@ setup_config()
 	echo TLSv1_2:TLSv1_3                      > $cntrldir/tlsservermethod
 	echo blocked@$HOSTNAME                    > $cntrldir/badmailfrom
 	echo blocked@$HOSTNAME                    > $cntrldir/badrcptto
+	echo blackholed@$HOSTNAME                 > $cntrldir/blackholedsender
+	echo blackholed@$HOSTNAME                 > $cntrldir/blackholercpt
 	echo 10                                   > $cntrldir/timeoutremote
 	echo 10                                   > $cntrldir/timeoutsmtpd
 	(
@@ -668,6 +671,8 @@ test_qmail_inject()
 			(
 			echo "=$testuser:$testuser:$myuid:$mygid:$testdir/$testuser:::"
 			echo "+$testuser-:$testuser:$myuid:$mygid:$testdir/$testuser:-::"
+			echo "=blackholed:blackholed:$myuid:$mygid:$testdir/blackholed:::"
+			echo "+blackholed-:blackholed:$myuid:$mygid:$testdir/blackholed:-::"
 			echo "."
 			) > $sysconfdir/users/assign
 		else
@@ -676,6 +681,8 @@ test_qmail_inject()
 			echo "+$user-:$user:$myuid:$mygid:$testdir/$user:-::"
 			echo "=$testuser:$testuser:$myuid:$mygid:$testdir/$testuser:::"
 			echo "+$testuser-:$testuser:$myuid:$mygid:$testdir/$testuser:-::"
+			echo "=blackholed:blackholed:$myuid:$mygid:$testdir/blackholed:::"
+			echo "+blackholed-:blackholed:$myuid:$mygid:$testdir/blackholed:-::"
 			echo "=$outarchive:$outarchive:$myuid:$mygid:$testdir/$outarchive:::"
 			echo "+$outarchive-:$outarchive:$myuid:$mygid:$testdir/$outarchive:-::"
 			echo "=$incarchive:$incarchive:$myuid:$mygid:$testdir/$incarchive:::"
@@ -1999,7 +2006,6 @@ test_smtp_chk_sender()
 	# to $HOSTNAME using $testdir/bin/qmail-remote
 	# Also, $testdir/bin/qmail-remote changes the recipient
 	# to $testuser@$HOSTNAME
-	#create_qmail_remote $testuser@$HOSTNAME
 	# we require authenticted SMTP because of CHECKSENDER
 	find $testdir/$testuser/Maildir -type f -exec /bin/rm -f {} \;
 	echo "$HOSTNAME:127.0.0.1:$smtp_port $user@$HOSTNAME abcd12345678" > $cntrldir/smtproutes
@@ -3198,6 +3204,74 @@ test_blocked()
 		(
 		echo "$logdir/smtpd/current"
 		cat $logdir/smtpd/current
+		)|less
+		failed=1
+		exit 1
+	fi
+}
+
+test_blackholed()
+{
+	t1=$(date +"%s.%4N")
+	if [ $# -eq 0 ] ; then
+		swaks -S --to blackholed@$HOSTNAME --from $user@$HOSTNAME --server localhost --port $smtp_port >$tmpdir/swaks.$$
+	else
+		swaks -S --to $user@$HOSTNAME  --from blackholed@$HOSTNAME -server localhost --port $smtp_port >$tmpdir/swaks.$$
+	fi
+	ret1=$?
+	/bin/rm -f $tmpdir/swaks.$$
+	if [ $# -eq 0 ] ; then
+		check_mail $testdir/blackholed/Maildir 2>/dev/null
+	else
+		check_mail 2>/dev/null
+	fi
+	ret2=$?
+	s1=$sleep_secs
+	if [ $# -eq 0 ] ; then
+		/bin/rm -f $cntrldir/blackholercpt
+	else
+		/bin/rm -f $cntrldir/blackholedsender
+	fi
+	if [ $# -eq 0 ] ; then
+		swaks --to blackholed@$HOSTNAME --from $user@$HOSTNAME --server localhost --port $smtp_port >$tmpdir/swaks.$$
+	else
+		swaks -S --to $user@$HOSTNAME  --from blackholed@$HOSTNAME -server localhost --port $smtp_port >$tmpdir/swaks.$$
+	fi
+	ret3=$?
+	if [ $# -eq 0 ] ; then
+		check_mail $testdir/blackholed/Maildir
+	else
+		check_mail
+	fi
+	ret4=$?
+	s2=$sleep_secs
+	if [ $ret1 -eq 0 -a $ret2 -ne 0 -a $ret3 -eq 0 -a $ret4 -eq 0 ] ; then
+		t2=$(date +"%s.%4N")
+		secs=$(echo $t1 $t2 $s1 $s2 | awk '{printf("%0.4f\n", $2-$1-$3-$4)}')
+		if [ $# -eq 0 ] ; then
+			tcount=$(expr $tcount + 1)
+			printf "\r  testing blackholedrcpt succeeded %69s [%.4f sec]\n" " " $secs
+		else
+			tcount=$(expr $tcount + 1)
+			printf "\r  testing blackholedsender succeeded %67s [%.4f sec]\n" " " $secs
+		fi
+		print_pct
+	else
+		t2=$(date +"%s.%4N")
+		secs=$(echo $t1 $t2 $s1 $s2 | awk '{printf("%0.4f\n", $2-$1-$3-$4)}')
+		printf "\r%118s\n" " "
+		echo "ret1=$ret1, ret2=$ret2, ret3=$ret3, ret4=$ret4"
+		if [ $# -eq 0 ] ; then
+			echo "  testing blackholedrcpt failed [$secs sec]"
+		else
+			echo "  testing blackholedsender failed [$secs sec]"
+		fi
+		(
+		echo "$logdir/smtpd/current"
+		echo "$logdir/smtpd/current"
+		cat $logdir/smtpd/current
+		echo "$logdir/qmail-send/current"
+		cat $logdir/qmail-send/current
 		)|less
 		failed=1
 		exit 1
@@ -4890,12 +4964,12 @@ test_hide_host_ip()
 	fi
 	(
 	printf "#!/bin/sh\nexec $envdir ./variables $tcpserver -u qmaild -g qmail -v -HR 0 "
-	printf "$smtp_port env HIDE_HOST=1 $qmail_smtpd $HOSTNAME $testdir/bin/authsmtp "
+	printf "$smtp_port $qmail_smtpd $HOSTNAME $testdir/bin/authsmtp "
 	printf "/bin/false 2>&1\n"
 	) >$servicedir/smtpd/run
 	/bin/rm -f $servicedir/smtpd/variables/SMTPS
 	sudo svc -r $servicedir/smtpd
-	sleep $sleep_int
+	sleep 3
 }
 
 do_svscan_without_svscanlog()
@@ -4922,6 +4996,8 @@ do_svscan_without_svscanlog()
 	test_smtp_surbl
 	test_autoresponder 0
 	test_qmail_qfilter
+	test_blackholed
+	test_blackholed 1
 	test_stop_smtps
 	test_stop_supervise
 	test_restart_service_using_hup
@@ -7021,7 +7097,7 @@ fi
 if [ -f $testdir/qtotal.count ] ; then
 	total_tests=$(cat $testdir/qtotal.count)
 else
-	total_tests=260
+	total_tests=262
 fi
 failed=0
 do_setup
