@@ -39,10 +39,14 @@ Release 3.0.6-1.1 Start 25/10/2023 End XX/XX/XXXX
 23. smtpd.c: Use do_match for matching host in badhost
 24. getDomainToken.c: restore original environment on no match when processing
     dkimkeys
-03/11/2023
+- 03/11/2023
 25. qregex.c: fix wildmat when pattern file is missing 
 26. smtpd.c: fix nodnscheck for helo/ehlo 
 27. test-indimail-mta: added badhelo test
+- 05/11/2023
+28. smtpd.c: fixed control filename for blackholedrcpt, blackholedrcptpatterns
+29. qmail.c: fixed NULLQUEUE
+30. tests/test-indimail-mta: added test for blackholedrcpt, blackholdsender
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
